tests/machine/x/c/update_stmt.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/update_stmt.c:28:3: error: conflicting types for ‘Person’; have ‘struct <anonymous>’
   28 | } Person;
      |   ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:22:23: note: previous declaration of ‘Person’ with type ‘Person’
   22 | typedef struct Person Person;
      |                       ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘test_update_adult_status’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:32:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   32 |   _t1.data[0] = (Person){.name = "Alice", .age = 17, .status = "minor"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:33:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   33 |   _t1.data[1] = (Person){.name = "Bob", .age = 26, .status = "adult"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:34:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   34 |   _t1.data[2] = (Person){.name = "Charlie", .age = 19, .status = "adult"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:35:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   35 |   _t1.data[3] = (Person){.name = "Diana", .age = 16, .status = "minor"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:36:10: error: ‘people’ undeclared (first use in this function)
   36 |   if (!((people == _t1))) {
      |          ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:36:10: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/update_stmt.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/update_stmt.c:44:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   44 |   _t2.data[0] = (Person){.name = "Alice", .age = 17, .status = "minor"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:45:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   45 |   _t2.data[1] = (Person){.name = "Bob", .age = 25, .status = "unknown"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:46:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   46 |   _t2.data[2] = (Person){.name = "Charlie", .age = 18, .status = "unknown"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:47:17: error: incompatible types when assigning to type ‘int’ from type ‘Person’
   47 |   _t2.data[3] = (Person){.name = "Diana", .age = 16, .status = "minor"};
      |                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:48:3: error: unknown type name ‘list_Person’
   48 |   list_Person people = _t2;
      |   ^~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:48:24: error: incompatible types when initializing type ‘int’ using type ‘list_int’
   48 |   list_Person people = _t2;
      |                        ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:49:33: error: request for member ‘len’ in something not a structure or union
   49 |   for (int _t3 = 0; _t3 < people.len; _t3++) {
      |                                 ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:50:24: error: request for member ‘data’ in something not a structure or union
   50 |     Person _t4 = people.data[_t3];
      |                        ^
/workspace/mochi/tests/machine/x/c/update_stmt.c:54:11: error: redefinition of ‘name’
   54 |     char *name = _t4.name;
      |           ^~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:51:11: note: previous definition of ‘name’ with type ‘char *’
   51 |     char *name = _t4.name;
      |           ^~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:55:9: error: redefinition of ‘age’
   55 |     int age = _t4.age;
      |         ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:52:9: note: previous definition of ‘age’ with type ‘int’
   52 |     int age = _t4.age;
      |         ^~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:56:11: error: redefinition of ‘status’
   56 |     char *status = _t4.status;
      |           ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:53:11: note: previous definition of ‘status’ with type ‘char *’
   53 |     char *status = _t4.status;
      |           ^~~~~~
/workspace/mochi/tests/machine/x/c/update_stmt.c:61:11: error: request for member ‘data’ in something not a structure or union
   61 |     people.data[_t3] = _t4;
      |           ^

   1: #include <stdio.h>
